--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 
 	<properties>
 		<jdk.version>1.8</jdk.version>
+		<snippetsDirectory>${project.build.directory}/generated-snippets</snippetsDirectory>
+
 	</properties>
 
 	<dependencies>
@@ -109,6 +111,15 @@
 	</dependencies>
 
 	<build>
+		<!-- Start Source -->
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<!-- End of Source -->
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -122,6 +133,73 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- Run Test -->
+
+			<!-- Run Test -->
+
+
+			<!-- Start Rest API document generation-->
+			<plugin>
+				<groupId>org.asciidoctor</groupId>
+				<artifactId>asciidoctor-maven-plugin</artifactId>
+				<version>1.5.2</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctorj-pdf</artifactId>
+						<version>1.5.0-alpha.9</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<sourceDirectory>src/main/apidocs</sourceDirectory>
+					<templateDir>src/main/apidocs</templateDir>
+					<preserveDirectories>true</preserveDirectories>
+					<title>Credit Card System</title>
+					<attributes>
+						<snippets>${snippetsDirectory}</snippets>
+						<project-version>${project.version}</project-version>
+						<dev-endpoint-url>http://localhost:8080/api</dev-endpoint-url>
+						<test-endpoint-url>http://localhost/api</test-endpoint-url>
+						<endpoint-url>https://localhost/api</endpoint-url>
+					</attributes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>output-html</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>process-asciidoc</goal>
+						</goals>
+						<configuration>
+							<backend>html5</backend>
+							<doctype>book</doctype>
+						</configuration>
+					</execution>
+					<execution>
+						<id>output-pdf</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>process-asciidoc</goal>
+						</goals>
+						<configuration>
+							<backend>pdf</backend>
+							<sourceHighlighter>rouge</sourceHighlighter>
+							<attributes>
+								<toc>left</toc>
+								<icons>font</icons>
+								<idprefix />
+								<sectanchors>true</sectanchors>
+								<!-- set the idprefix to blank -->
+								<idprefix />
+								<idseparator>-</idseparator>
+								<docinfo1>true</docinfo1>
+							</attributes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- End Rest API document generation-->
 		</plugins>
 	</build>
 
