--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.4.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.bank</groupId>
 	<artifactId>credit-card-processing</artifactId>
@@ -28,55 +28,41 @@
 		<timestamp>${maven.build.timestamp}</timestamp>
 	</properties>
 
+	<!-- Source Code Management -->
 	<scm>
 		<connection>scm:git@github.com:rahulmzn/credit-card-processing.git</connection>
 		<url>scm:git@github.com:rahulmzn/credit-card-processing.git</url>
 		<developerConnection>scm:git@github.com:rahulmzn/credit-card-processing.git</developerConnection>
 	</scm>
-
+	<!-- Source Code Management -->
 	<dependencies>
 		<!-- Start Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<!-- End Spring Boot -->
-
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-
 		<!-- start constraints -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
 		<!-- end constraints -->
-
-		<!-- start database-->
+		<!-- start in-memory database-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -90,40 +76,33 @@
 			<artifactId>embedmongo-spring</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		<!-- end -database -->
-
+		<!-- end in-memory database -->
 		<!-- Start Junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- End Junit -->
-
 		<!-- Start Rest API documentation -->
 		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>net.sourceforge.pjl-comp-filter</groupId>
 			<artifactId>pjl-comp-filter</artifactId>
 			<version>1.7</version>
 		</dependency>
 		<!-- End Rest API documentation -->
-
 		<!-- Start  JSON -->
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path-assert</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- End JSON -->
-
 		<!-- Start Swagger Docs-->
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -131,6 +110,13 @@
 			<version>1.5.2</version>
 		</dependency>
 		<!-- End Swagger Docs -->
+		<!-- Start Supporting lib -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- End Supporting lib-->
 	</dependencies>
 
 	<build>
@@ -308,7 +294,7 @@
 			<!-- End Reporting -->
 
 
-			<!-- Start Rest API document generation-->
+			<!-- Start Rest API document generation -->
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
 				<artifactId>asciidoctor-maven-plugin</artifactId>
@@ -368,8 +354,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!-- End Rest API document generation-->
+			<!-- End Rest API document generation -->
 		</plugins>
 	</build>
 
