--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 springdoc.swagger-ui.path=/swagger-ui-custom.html
-data.collection.name = "cards"
+#data.collection.name = "cards"
 server.port=8080
